<resources>
    <string name="app_name">Teleprompter</string>
    <string name="start">Begin</string>
    <string name="clipboard_paste_button_text">Replace with Clipboard</string>
    <string name="clear_button_text">Clear</string>
    <string name="clipboard_empty_toast_text">No text in clipboard to paste!</string>

    <string name="dialog_clear_title">Confirm</string>
    <string name="dialog_clear_confirmation">Are you sure you want to clear?</string>
    <string name="dialog_clear_positive">Yes</string>
    <string name="dialog_clear_negative">Cancel</string>

    <string name="dialog_clipreplace_title">Confirm</string>
    <string name="dialog_clipreplace_confirmation">Are you sure you want to replace with the text from your clipboard?</string>
    <string name="dialog_clipreplace_positive">Yes</string>
    <string name="dialog_clipreplace_negative">Cancel</string>

    <!-- Teleprompter Activity -->
    <string name="title_activity_teleprompter">Teleprompter</string>
    <string name="placeholder">Lorem ipsum dolor sit amet consectetur adipiscing elit semper condimentum scelerisque sed, dui rhoncus quam platea velit tempor taciti turpis libero curabitur. Ut at fermentum vehicula erat libero sagittis nisl pulvinar inceptos egestas nisi fusce condimentum taciti, nunc rhoncus pharetra hendrerit convallis dictum duis curae gravida conubia lacinia proin eleifend. Proin a magna mus suscipit turpis primis elementum, dignissim aliquet iaculis integer commodo sociosqu, ridiculus et eu dui tristique auctor.</string>
    <string name="tap_to_start">Tap to start</string>
    <string name="user_string_extra_key">userString</string>

    <!-- Strings related to Settings -->
    <string name="action_settings">Settings</string>
    <string name="title_activity_settings">Settings</string>

    <!--
        format:
        headers (as in PreferenceCategories) are pref_header_NAME
        titles of the actual settings: pref_title_NAME
        keys of those settings: pref_key_NAME
        default value: pref_default_NAME
    -->
    <!-- Teleprompter settings -->
    <string name="pref_header_teleprompter">Teleprompter</string>

    <string name="pref_title_scroll_speed">Scroll Speed</string>
    <string name="pref_key_scroll_speed">pref_key_scroll_speed</string>
    <string name="pref_max_scroll_speed">15</string>
    <string name="pref_default_scroll_speed">8</string>

    <string name="pref_title_mirror_text">Mirror text</string>
    <string name="pref_key_mirror_text">pref_key_mirror_text</string>
    <string name="pref_default_mirror_text">false</string>

    <string name="pref_title_padding_switch">Enable padding around text</string>
    <string name="pref_summary_padding_switch">Add empty lines before/after the text</string>
    <string name="pref_key_padding_switch">pref_key_padding_switch</string>
    <string name="pref_default_padding_switch">false</string>

    <string name="pref_title_padding_above">Padding above text</string>
    <string name="pref_key_padding_above">pref_key_padding_above</string>
    <string name="pref_default_padding_above">0</string>

    <string name="pref_title_padding_below">Padding below text</string>
    <string name="pref_key_padding_below">pref_key_padding_below</string>
    <string name="pref_default_padding_below">0</string>

    <string name="pref_title_display_name">Display name</string>
    <string name="pref_default_display_name">John Smith</string>

    <!-- Font settings -->
    <string name="pref_header_font">Font</string>

    <string name="pref_title_font_size">Font Size</string>
    <string name="pref_key_font_size">pref_key_font_size</string>
    <string name="pref_default_font_size">60</string>

    <string name="pref_title_font_preview">Preview font size on main screen</string>
    <string name="pref_key_font_preview">pref_key_font_preview</string>
    <string name="pref_default_font_preview">false</string>

    <string-array name="pref_font_sizes_labels">
        <item>36</item>
        <item>42</item>
        <item>48</item>
        <item>54</item>
        <item>60</item>
        <item>66</item>
        <item>72</item>
        <item>78</item>
        <item>84</item>
    </string-array>
</resources>
